# rag-monorepo

./: .gitignore  generate_rag_final_scaffold.py  generate_reranker_training_scaffold.py  rag_server.docx  reranker 训练工程档案.docx  ~$e 工程文档.docx  ~$r 工程档案.docx  ~$ranker 训练工程档案.docx  ~WRL0003.tmp  ~WRL0956.tmp  ~WRL1058.tmp  ~WRL2746.tmp  ~WRL2852.tmp
cc-pipeline/: .gitignore  README.md  pyproject.toml  requirements.txt
cc-pipeline/configs/: pipeline.yaml  pipeline_colab.yaml  pipeline_test.yaml  seeds.yaml
cc-pipeline/scripts/: bootstrap.sh
cc-pipeline/src/cc_pipeline/: cli.py  run_cleaning.py  settings.py
cc-pipeline/src/cc_pipeline/clean/: html_cleaner.py  pdf_cleaner.py  writer.py
cc-pipeline/src/cc_pipeline/common/: hashing.py  io.py
cc-pipeline/src/cc_pipeline/crawl/: fetcher.py  link_extractor.py  manifest.py  url_utils.py
cc-pipeline/src/cc_pipeline/pipeline/: run.py
cc-pipeline/tests/: test_hashing.py  test_html_cleaner.py  test_link_extractor.py  test_manifest.py  test_no_cross_domain_fetch.py  test_pdf_cleaner.py  test_pipeline_integration.py  test_run_cleaning.py  test_settings_new_fields.py  test_smoke.py  test_url_utils.py  test_writer.py
cc-pipeline/tests/tests/: test_pipeline_bfs_crawl.py
ce-pipeline/: .gitignore  README_EN.md  README_ZH.md  chunks.jsonl  pyproject.toml  requirements.txt
ce-pipeline/configs/: pipeline.yaml  pipeline_colab.yaml  pipeline_colab_gpu.yaml  pipeline_test.yaml
ce-pipeline/scripts/: dev_install.ps1  dev_install.sh
ce-pipeline/src/ce_pipeline/: cli.py  settings.py
ce-pipeline/src/ce_pipeline/chunking/: __init__.py  chunker.py  html_chunker.py  pdf_chunker.py  sliding_window.py
ce-pipeline/src/ce_pipeline/embedding/: __init__.py  embedder.py
ce-pipeline/src/ce_pipeline/indexing/: __init__.py  bm25.py  vector.py
ce-pipeline/src/ce_pipeline/io/: __init__.py
ce-pipeline/src/ce_pipeline/pipeline/: chunking_stage.py  embedding_stage.py  indexing_stage.py  run.py
ce-pipeline/src/ce_pipeline/processing/: __init__.py  exact_dedup.py  near_dedup.py  noise_filter.py  noise_trim.py  repair.py
ce-pipeline/src/ce_pipeline/stores/: __init__.py  registry.py
ce-pipeline/tests/: test_bm25.py  test_boundary_repair_syntok.py  test_chunker.py  test_chunking_stage.py  test_embedder.py  test_embedding_stage.py  test_exact_dedup.py  test_filesystem.py  test_indexing_stage.py  test_integration_pipeline.py  test_io_jsonl.py  test_near_dedup.py  test_noise_filter.py  test_noise_trim.py  test_repair.py  test_settings.py  test_vector.py
ce-pipeline/tests/fixtures/: documents.jsonl
qr-pipeline/: .gitignore  README.md  in_domain.jsonl  pyproject.toml
qr-pipeline/configs/: pipeline.yaml  pipeline_colab.yaml  pipeline_test.yaml
qr-pipeline/src/qr_pipeline/: cli.py  settings.py
qr-pipeline/src/qr_pipeline/io/: jsonl.py
qr-pipeline/src/qr_pipeline/llm/: __init__.py  doc_classification_gemini.py  hf_transformers_llm.py  hf_transformers_reranker.py  pairing.py  query_classification.geminipy  query_classification_gemini.py  query_generation_gemini.py  retrieval.py
qr-pipeline/src/qr_pipeline/pipeline/: prompts.py  query_generation.py  query_stage.py  run.py  run_pairing.py  run_qg.py
qr-pipeline/src/qr_pipeline/processing/: __init__.py  merge_jsonl.py  near_dedup.py
qr-pipeline/src/qr_pipeline/stores/: base.py  filesystem.py  object_storage.py  registry.py
qr-pipeline/tests/: test_build_pairs_for_query.py  test_hf_llm_device_move.py  test_hf_transformers_llm.py  test_pairing.py  test_parse_in_out_queries.py  test_query_generation.py  test_query_generation_incremental.py  test_retrieval.py  test_run_pairing.py  test_run_pairing_candidates.py  test_run_qg.py  test_settings_smoke.py
rag_service/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.in
rag_service/configs/: rag.yaml  rag_aws.yaml  rag_colab.yaml
rag_service/src/rag_service/: cli.py  routes.py  server.py  settings.py  wiring.py
rag_service/src/rag_service/common/: bm25_portable.py  retriever.py
rag_service/src/rag_service/io/: jsonl.py
rag_service/src/rag_service/lcel/: direct_answer_node.py  rag_answer_node.py  reranker_node.py  retriever_node.py  router_node.py
rag_service/src/rag_service/stores/: filesystem.py  registry.py
rag_service/src/rag_service/validation/: build_grounded_qa_dataset.py  eval_direct_vs_rag.py  judge_answer_with_gemini.py  val_data_generation_gemini.py
rag_service/tests/: est_direct_answer_node.py  test_bm25_portable.py  test_hybrid_retriever.py  test_pipeline_integration_mock.py  test_rag_answer_node.py  test_reranker_node_logic.py
reranker_training/: .gitignore  README.md  pyproject.toml  requirements_fallback.txt
reranker_training/configs/: train_qlora.yaml  train_qlora_colab.yaml  train_qlora_test.yaml
reranker_training/src/reranker_training/: __init__.py  build_valid_split.py  data.py  modeling.py  settings.py  train_reranker.py  trainer.py
reranker_training/src/reranker_training/data/: build_epoch_train_jsonl.py  data_preprocessing.py  data_split.py
reranker_training/src/reranker_training/stores/: base.py  registry.py
reranker_training/tests/: test_build_epoch_train_jsonl.py  test_build_valid_split.py  test_data_preprocessing.py  test_data_split_query_pack.py  test_train_min_e2e.py  test_train_real_model.py  test_train_reranker_main.py  test_train_smoke.py  test_trainer.py
