[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reranker_training"
version = "0.1.0"
description = "Cross-encoder reranker LoRA/QLoRA training scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pyyaml>=6.0.1",
  "orjson>=3.10.0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0",
  "transformers>=4.41.0",
  "datasets>=2.19.0",
  "accelerate>=0.33.0",
  "peft>=0.12.0",
  "bitsandbytes>=0.43.0",
  "peft>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 110
