[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reranker_training"
version = "0.1.0"
description = "Cross-encoder reranker LoRA/QLoRA training scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "pyyaml>=6.0.1",
  "orjson>=3.10.0",
  "tqdm>=4.66.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "torch>=2.2.0",
  "transformers>=4.41.0",
  "datasets>=2.19.0",
  "accelerate>=0.33.0",
  "peft>=0.12.0",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0
  "rank-bm25>=0.2.2",
  "Whoosh>=2.7.4",

  "langchain>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-google-genai>=1.0.0",

  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sse-starlette>=2.0.0",

  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
qlora = [
  "bitsandbytes>=0.43.0",
]

[project.scripts]
reranker-t = "reranker_training.train_reranker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
